--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "webpack-dev-server"
+    "server": "webpack-dev-server --hot --inline --port 8700"
   },
   "author": "andy",
   "license": "ISC",
