--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-mixin": "^4.0.0",
+    "react-responsive": "^4.0.3",
     "styled-components": "^2.2.4",
     "webpack": "^3.8.1"
   }
