--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-mixin": "^4.0.0",
     "react-responsive": "^4.0.3",
     "styled-components": "^2.2.4",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "whatwg-fetch": "^2.0.3"
   }
 }
