--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-core": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "babelify": "^8.0.0",
+    "koa": "^2.4.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-mixin": "^4.0.0",
